fixed some small layout issues

--- a/main.css
+++ b/main.css
@@ -169,6 +169,7 @@ a.portfolio-link:hover {
 
 .sub-headline {
     margin-left: 10px;
+    margin-right: 10px;
 }
 
 .item {
